je modifie mon code html et je le push dans git

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              <main>
                     <img class="bannière" src="images/sanfrancisco.jpg" alt="photo saint francisco">
                     <div class="photo">
-                     <p>Retour sur mes vacances aux Etat unis...</p>
+                     <p>Retour sur mes vacances aux Etat unis....</p>
                      <button class="styled" type="button">Voir l'article</button>
                     </div>
                      <article class="flex3">
